close #1 add openapi
